<resources>
    <string name="app_name">ReachTheGym</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>

    <string-array name="dias_semana">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_registro">Nombre</string>
    <string name="dni">DNI</string>
    <string name="apellidos_registro">Apellidos</string>
    <string name="tel_fono_registro">Teléfono</string>
    <string name="direcci_n_registro">Dirección</string>
    <string name="contrase_a_registro">Contraseña</string>
    <string name="registrarse_registro">Registrarse</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="todo">TODO</string>
    <string name="tipousuario">TipoUsuario</string>
    <string name="nombreusuario_ad">NombreUsuario</string>
    <string name="apellidosusuarioad">ApellidosUsuario</string>
    <string name="fechaaltaad">FechaAlta</string>
    <string name="tipo_de_usuario">Tipo de Usuario:</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar_usuario">Eliminar Usuario</string>
    <string name="Buscar" />
    <string name="nombreUsuListar">Nombre:</string>
    <string name="tipoUsuListar">Tipo:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="fechaAltaUsuListar">Fecha de Alta:</string>
    <string name="telUsuVer">Telefono:</string>
    <string name="apeUsuVer">Apellidos:</string>
    <string name="nomUsuVer">Nombre:</string>
    <string name="direcUsuVer">Direccion:</string>
    <string name="faltaUsuVer">Fecha de alta:</string>
    <string name="emUsuVer">Email:</string>
    <string name="nombreEjercicio">Nombre</string>
    <string name="zonaEjercicio">Zona</string>
    <string name="objetivoEjercicio">Objetivo Ejercicio</string>
    <string name="descripcionEjercicio">Inserte una descripción para el ejercicio</string>
    <string name="anadirEjercicio">Añadir</string>
    <string name="nombreListar">Nombre</string>
    <string name="objetivoListar">Objetivo</string>
    <string name="zonaListar">Zona</string>
    <string name="nombreEjer">Nombre:</string>
    <string name="zonaEjeri">Zona:</string>
    <string name="nombreEjerci">Nombre:</string>
    <string name="objetivoEjerci">Objetivo:</string>
    <string name="descripcionEjerc">Descripción:</string>
    <string name="borrarEjer">Borrar</string>
    <string name="men_opciones">Menú Opciones</string>
    <string name="listar_usuarios">Listar Usuarios</string>
    <string name="a_adir_competici_n">Añadir Competición</string>
    <string name="a_adir_rutina_cliente">Añadir Rutina Cliente</string>
    <string name="crear_clase">Crear Clase</string>
    <string name="crear_rutina">Crear Rutina</string>
    <string name="borrarVerEJercicio">Borrar</string>
    <string name="nombreClaese">Nombre</string>
    <string name="descripcionClase">Descripción</string>
    <string name="aulaClase">Aula</string>
    <string name="diaClase">Dia</string>
    <string name="horaClase">Hora inicio</string>
    <string name="horaFinalClase">Hora Finalización</string>
    <string name="anadirClase">Añadir</string>
    <string name="imagenitem">imagenitem</string>
    <string name="asistirListar">Asistir</string>
    <string name="aulaVerClase">Aula:</string>
    <string name="diaVerClase">Dia:</string>
    <string name="diaDeLaSemana">Dia de la semana:</string>
    <string name="nombre_para_la_rutina">Nombre para la rutina</string>
    <string name="crearRutina">Crear Rutina</string>
    <string name="img_item_rutinas">img_item_rutinas</string>
    <string name="creadorRutina">Creador:</string>
    <string name="img_item_rutina">img_item_rutina</string>
    <string name="busque_la_rutina">Busque la rutina</string>
    <string name="descripci_n_de_la_competici_n">Descripción de la competición</string>
    <string name="nombre_del_segundo_ejercicio">Nombre del segundo ejercicio</string>
    <string name="nombre_del_primer_ejercicio">Nombre del primer ejercicio</string>
    <string name="img_item_competi">img_item_competi</string>
    <string name="nombre_competicion">Nombre competicion</string>
    <string name="nombreCOmpeti">Nombre Competicion</string>
    <string name="no_hay_competiciones_a_n">No hay competiciones aún</string>
    <string name="imagen_ver_competicion">imagen ver competicion</string>
    <string name="ejercicio_1">Ejercicio 1:</string>
    <string name="ejercicio_2">Ejercicio 2:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="apuntarse">Apuntarse</string>
    <string name="a_adir_participacion">Añadir participacion</string>
    <string name="puntos_ejercicio_2">Puntos ejercicio 2</string>
    <string name="puntos_ejercicio_1">Puntos ejercicio 1</string>
    <string name="ver_ranking">Ver Ranking</string>
    <string name="participantes">Participantes:</string>
    <string name="imagen_ranking">imagen ranking</string>
    <string name="puntos">Puntos:</string>
    <string name="imagen_ver_ranking">imagen ver ranking</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="listar_clasesCliente">Listar Clases</string>
    <string name="anunciocompa_ero">AnuncioCompañero</string>
    <string name="listar_clases">Listar Clases</string>
    <string name="telefono">Telefono:</string>
    <string name="fecha_alta">Fecha Alta:</string>
    <string name="Clienn">Email:</string>
    <string name="direccion">Direccion:</string>
    <string name="dniII">DNI:</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="imagen_modificar_perfil">imagen modificar perfil</string>
    <string name="imagen_hecha">imagen hecha</string>
    <string name="terminar">Terminar</string>
    <string name="SS">Ejercicios:</string>
    <string name="mis_rutinas">Mis Rutinas</string>
    <string name="descripcion_para_la_rutina">Descripcion para la rutina</string>
    <string name="introduce_una_descripci_n_para_la_rutina">Introduce una descripción para la rutina</string>
    <string name="publicar">Publicar</string>
    <string name="imagen_publi">imagen publi</string>
    <string name="introduce_los_datos_para_poder_continuar">Introduce los datos para poder continuar</string>
    <string name="rellene_los_campos_para_poder_continuar">Rellene los campos para poder continuar</string>
    <string name="horario">Horario</string>
    <string name="finalidad_de_la_rutina">Finalidad de la rutina</string>
    <string name="buscarcompi">buscarcompi</string>
    <string name="chat">Chat</string>
    <string name="enviar">Enviar</string>
    <string name="mensaje">Mensaje</string>
    <string name="imagen_perfil">imagen perfil</string>
    <string name="finalidad_del_entrenamiento">Finalidad del entrenamiento</string>
    <string name="introduce_una_drescripcion_para_la_rutina">Introduce una drescripcion para la rutina:</string>
    <string name="imagen_letras_logo">imagen letras logo</string>
    <string name="series">Series</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="seriesVer">Series:</string>
    <string name="repeticionesVer">Repeticiones:</string>
    <string name="RRRR">Buscar</string>
</resources>
