<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_listar_admin"
                android:layout_width="195dp"
                android:layout_height="102dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nom_usu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombreUsuListar"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nom_usu_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nombreusuario_ad" />

                    <TextView
                        android:id="@+id/tipo_usu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tipoUsuListar"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tipo_usuario_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tipousuario" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/apellidos_usu"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/apellidos"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/apellidos_usu_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/apellidosusuarioad" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fecha_usu"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fechaAltaUsuListar"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/falta_usu_admin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fechaaltaad" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</com.google.android.material.card.MaterialCardView>