<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VerCompeticion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_ver_competicion"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/cargando"
            android:contentDescription="@string/imagen_ver_competicion"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nom_competi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreEjer"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nom_eje1_competi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ejercicio_1"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nom_eje2_competi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ejercicio_2"
                    android:textStyle="bold"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/participantes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participantes"
                    android:textStyle="bold"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/desc_competicion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nombre_ver_competicion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nombre_eje1_competicion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nombre_eje2_competicion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/participantes_competicion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descripcion_ver_competicion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bton_ranking_competicion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/ver_ranking" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bton_apuntarse_competicion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:text="@string/apuntarse" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/puntos_ejercicio_1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/puntos_ejer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/puntos_ejercicio_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/puntos_ejer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bton_añadir_participacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/a_adir_participacion" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/modificar_competicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/modificar" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/borrar_competicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/borrarEjer" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>