<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VerPerfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/cargando" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreEjer"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apellidos"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_alta"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Clienn"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/direccion"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dniII"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombre_ver_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/apellidos_ver_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/telefono_ver_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/fecha_ver_pefil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/email_ver_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/direccion_ver_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/dni_ver_perfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/modificar_perfil"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/modificar" />

        <Button
            android:id="@+id/cerrar_sesion_perfil"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cerrar_sesion" />

    </LinearLayout>
</ScrollView>